# notifykit

./: .gitignore  .readthedocs.yaml  AGENTS.md  Cargo.toml  Dockerfile.test  LICENSE  Makefile  README.md  RELEASE.md  mkdocs.yml  pyproject.toml  pytest.ini
.cargo/: config.toml
.github/workflows/: ci.yaml
docs/: index.md
examples/: .gitignore  awatch_dir_recursively.py  print_lib_version.py  watch_dir_recursively.py
inotify_toolkit/: __init__.py  _inotify_toolkit_lib.pyi  _notifier.py
inotifykit/: __init__.py  _notifier.py  _testing.py
notifykit/: __init__.py  _filters.py  _notifier.py  _notifykit_lib.pyi  _testing.py  _typing.py  py.typed
src/: events.rs  events1.rs  events2.rs  file_cache.rs  filter.rs  lib.rs  processor.rs  watcher.rs
src/events/: access.rs  base.rs  create.rs  delete.rs  mod.rs  modify.rs  others.rs  rename.rs
src/testcases/processor/: atomic_file_update.hjson
tests/: conftest.py  test_events_create.py  test_filters.py  test_match_events.py
tests/integration/: conftest.py  test_batching.py  test_dir_events.py  test_file_events.py  test_filters.py  test_watching.py
