[package]
name = "notifykit_lib"
version = "0.2.0"
edition = "2021"

description = "A toolkit for building applications watching filesystem changes"

license = "Apache-2.0"

homepage = "https://github.com/roma-glushko/notifykit"
repository = "https://github.com/roma-glushko/notifykit"
readme = "README.md"

rust-version = "1.78"

[dependencies]
crossbeam-channel = "0.5.4"
crossbeam-utils = "0.8.16"
notify-debouncer-full = "0.3.1"
notify = { version = "6.1.1"}
pyo3 = {version = "0.20.0", features = ["extension-module", "abi3-py38"]}
file-id = "0.2.1"
walkdir = "2.4.0"
pyo3-asyncio = { version = "0.20.0", features = ["tokio-runtime"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread", "time", "macros", "sync"] }

[lib]
name = "_notifykit_lib"
crate-type = ["cdylib"]
