[package]
name = "notifykit_lib"
version = "0.3.0"
edition = "2024"

description = "A toolkit for building applications watching filesystem changes"

license = "Apache-2.0"

homepage = "https://github.com/roma-glushko/notifykit"
repository = "https://github.com/roma-glushko/notifykit"
readme = "README.md"

rust-version = "1.85"

[dependencies]
log = "0.4"
notify = { version = "8.2.0" }
pyo3 = { version = "0.28.0", features = ["extension-module", "abi3-py310"] }
file-id = "0.2.3"
walkdir = "2.5.0"
pyo3-async-runtimes = { version = "0.28.0", features = ["tokio-runtime"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "time", "macros", "sync"] }

[lib]
name = "_notifykit_lib"
crate-type = ["cdylib"]
