[project]
name = "notifykit"
version = "0.1.0a1"
description = "A modern efficient Python toolkit for building applications that need to watch filesystem changes"
authors = [
    {name = "Roman Glushko", email = "roman.glushko.m@gmail.com"},
]

classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
    "anyio>=4.10.0",
]

requires-python = '>=3.9'
readme = "README.md"

license = { file = "LICENSE" }

[project.urls]
Homepage = 'https://github.com/roma-glushko/notifykit'

[build-system]
requires = ['maturin>=0.14.16,<2']
build-backend = 'maturin'

[tool.maturin]
module-name = "notifykit._notifykit_lib"
bindings = 'pyo3'

[tool.ruff]
line-length = 120

[lint]
extend-select = ['Q']
flake8-quotes = {inline-quotes = 'double', multiline-quotes = 'double'}

[tool.mypy]
strict = true
warn_return_any = false
show_error_codes = true

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "mypy>=1.14.1",
    "ruff>=0.12.10",
    "mkdocs-material[imaging]>=9.6.18",
    "mkdocs>=1.6.1",
]
